🚀 Add get chisme endpoint
