# routes/api.php
@@ -22,4 +22,5 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/chismes', [ApiChismeController::class, 'index']);
     Route::post('/chismes', [ApiChismeController::class, 'store']);
+    Route::get('/chismes/{id}', [ApiChismeController::class, 'show']);
 });
